tests/NormalTests/paczka2/big_fuzzy/85288325.err
Error in line 2: dL8WgmX S769 26,7
Error in line 4: fysdrYDD A645 86,3
Error in line 3: dL8WgmX A693 99,0
Error in line 15: dL8WgmX S747 86,0
Error in line 17: wxEADCBp S769 45,7
Error in line 22: wxEADCBp A645 42,8
Error in line 26: fysdrYDD A693 66,4
Error in line 42: AK8yPz A645 12,9
Error in line 44: dL8WgmX S747 85,8
Error in line 34: wxEADCBp S747 94,8
Error in line 48: wxEADCBp S769 8,6
Error in line 61: dL8WgmX A645 52,3
Error in line 63: fysdrYDD A645 410,8
Error in line 88: AK8yPz S747 93,7
Error in line 87: dL8WgmX S769 113,2
Error in line 96: S769 S769 159,4
Error in line 98: S769 A645 90,2
Error in line 56: pYoYOgNjYmc A645 44,8
Error in line 99: S769 A693 58,6
Error in line 103: AK8yPz S769 91,4
Error in line 107: dL8WgmX A645 -1,3
Error in line 84: fysdrYDD A693 69,9
Error in line 106: AK8yPz S747 19,4
Error in line 111: S769 S769 20,6
Error in line 119: wxEADCBp S747 13,9
Error in line 94: dL8WgmX A645 32,8
Error in line 136: pYoYOgNjYmc S747 67,87
Error in line 130: pYoYOgNjYmc A693 96,3
Error in line 138: S769 S769 89,2
Error in line 140: pYoYOgNjYmc S769 50,4
Error in line 146: fysdrYDD A645 73,6
Error in line 139: AK8yPz S747 112,9
Error in line 132: wxEADCBp A693 38,8
Error in line 151: AK8yPz S769 10,9
Error in line 118: 1ftGCfFc5dJ S769 10,7
Error in line 161: AK8yPz A645 -1,1
Error in line 159: S769 S769 33,4
Error in line 156: AK8yPz A645 87,1
Error in line 175: fysdrYDD S769 12,1
Error in line 171: dL8WgmX A645 38,5
Error in line 191: AK8yPz S747 69,6
Error in line 198: fysdrYDD S747 35,4
Error in line 201: AK8yPz A693 47,2
Error in line 204: fysdrYDD A693 32,2
Error in line 202: pYoYOgNjYmc A693 79,4
Error in line 210: S769 A645 37,18
Error in line 203: S769 S769 77,0
Error in line 212: S769 A645 48,8
Error in line 215: S769 S769 98,4
Error in line 226: S769 S747 -1,6
Error in line 228: pYoYOgNjYmc S769 .7,3
Error in line 222: S769 S747 18,1
Error in line 231: pYoYOgNjYmc S769 -1,2
Error in line 229: S769 S769 97,7
Error in line 232: S769 A693 97,2
Error in line 238: pYoYOgNjYmc A693 5,0
Error in line 235: S769 A645 29,0
Error in line 239: pYoYOgNjYmc S747 0,8
Error in line 242: S769 S769 47,6
Error in line 246: pYoYOgNjYmc A693 25,63
